force-app/main/default/objects/Technician__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Address</label>
    <referenceTo>Address</referenceTo>
    <relationshipLabel>Technicians</relationshipLabel>
    <relationshipName>Technicians</relationshipName>
    <type>Lookup</type>
</CustomField>