force-app/main/default/objects/Technician__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Technicians</relationshipLabel>
    <relationshipName>Technicians</relationshipName>
    <type>Lookup</type>
</CustomField>